# ebpf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  Dockerfile  EXCLUSIONS.md  Jenkinsfile  LICENSE.txt  Makefile  NOTICE.txt  README.md  RazorProject.xml  build_demos.sh  build_lib.sh  clean.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yaml  enhancement_request.yaml
.github/workflows/: build.yml  ci.yml  formatting-build.yml  issues.yml  local-build.yml  multikernel-tester.yml
GPL/: CMakeLists.txt
GPL/EventProbe/: BPFEventsTests.cpp  CMakeLists.txt  EbpfEventProto.h  EventProbe.bpf.c  FileEvents.h  FileEventsHelpers.h  Helpers.h  Maps.h  PathResolver.h  State.h
GPL/EventProbe/File/: Probe.bpf.c  Probe.h  State.h
GPL/EventProbe/Network/: Network.h  Probe.bpf.c  Probe.h
GPL/EventProbe/Process/: Probe.bpf.c  Probe.h
GPL/Events/: BPFEventsTests.cpp  BPFFileEventsTests.cpp  CMakeLists.txt  EbpfEventProto.h  EventProbe.bpf.c  FileEvents.bpf.c  FileEvents.h  Helpers.h  Maps.h  PathResolver.h  State.h  Varlen.h
GPL/Events/File/: File.h  Probe.bpf.c
GPL/Events/Network/: Network.h  Probe.bpf.c
GPL/Events/Process/: Probe.bpf.c
GPL/HostIsolation/: CMakeLists.txt
GPL/HostIsolation/KprobeConnectHook/: CMakeLists.txt  Kerneldefs.h  KprobeConnectHook.bpf.c  Makefile  kerneldefs.h  kprobe_connect_hook.bpf.c  kprobe_connect_hook.c
GPL/HostIsolation/TcFilter/: .gitignore  BPFTcFilterTests.cpp  CMakeLists.txt  Kerneldefs.h  Makefile  README  TcFilter.bpf.c  TcFilter.c  TcFilterTest.cpp  TcFilterdefs.h  kerneldefs.h
cmake/modules/: BPF.cmake  BPFDefinitions.cmake  GenerateVmlinux.cmake  GoogleTest.cmake  arch.cmake  libbpf.cmake  libelf.cmake  libz.cmake  setup.cmake
contrib/: build_libelf.sh  clean_libelf.sh
contrib/elftoolchain/: Makefile  README.elastic  README.quark  commit
contrib/elftoolchain/common/: native-elf-format
contrib/elftoolchain/libelf/: GNUmakefile  elf.h  elf_open.c  gelf.h  gelf_shdr.c  libelf.h  os.Linux.mk
contrib/elftoolchain/libpe/: pe_buffer.c
contrib/elftoolchain/mk/: os.Linux.mk
contrib/libbpf/include/: libelf.h
contrib/libbpf/src/: Makefile  libbpf.c  libbpf.h  linker.c  skel_internal.h  usdt.c
contrib/patch/: elftoolchain.patch
contrib/vmlinux/: README.md
contrib/vmlinux/aarch64/: VERSION  vmlinux.h
contrib/vmlinux/x86_64/: VERSION  vmlinux.h
docker/: Dockerfile.builder  Dockerfile.imagepack
docs/: events.md  hostisolation.md
docs/proposals/: feature-detection.md
ebpf/host_isolation/tc_filter/: README  tc_filter.c
include/: libebpf.h
non-GPL/: CMakeLists.txt
non-GPL/Common/: CMakeLists.txt  Common.c  Common.h
non-GPL/Events/: CMakeLists.txt
non-GPL/Events/EventsTrace/: CMakeLists.txt  EventsTrace.c
non-GPL/Events/Lib/: CMakeLists.txt  EbpfEvents.c  EbpfEvents.h
non-GPL/Events/Lib/TestLoader/: CMakeLists.txt  EbpfEventsTestLoader.c
non-GPL/Events/LibEbpfEvents/: LibEbpfEvents.h
non-GPL/EventsTrace/: CMakeLists.txt  EventsTrace.c  K8sMetaDataTester.c  libebpf_proposal.c
non-GPL/HostIsolation/: CMakeLists.txt
non-GPL/HostIsolation/Demos/: CMakeLists.txt  TcLoaderDemo.c  UpdateIPsDemo.c  UpdatePidsDemo.c
non-GPL/HostIsolation/KprobeConnectHook/: CMakeLists.txt  KprobeConnectHook.c  KprobeConnectHookDemo.c  KprobeLoader.c  KprobeLoader.h  Makefile  kprobe_connect_hook.c  kprobe_loader.c
non-GPL/HostIsolation/Lib/: CMakeLists.txt  Common.c  Common.h  KprobeLoader.c  KprobeLoader.h  TcLoader.c  TcLoader.h  UpdateMaps.c  UpdateMaps.h
non-GPL/HostIsolationMapsUtil/: CMakeLists.txt  Makefile  UpdateIPsDemo.c  UpdateMaps.c  UpdateMaps.h  UpdatePids.c  UpdatePidsDemo.c  update_IPs.c  update_maps.c  update_maps.h  update_pids.c
non-GPL/LibEbpfEvents/: CMakeLists.txt  LibEbpfEvents.c  LibEbpfEvents.h
non-GPL/LibEbpfEventsTestLoader/: CMakeLists.txt  LibEbpfEventsTestLoader.c
non-GPL/TcLoader/: CMakeLists.txt  Makefile  TcLoader.c  TcLoader.h  TcLoaderDemo.c
non-GPL/include/: EventProbe.skel.h
testing/: README.md  run_tests.sh
testing/init/: init.c
testing/kernel_builder/: .config  Dockerfile  Dockerfile.new  Dockerfile.old  Makefile  README.md  build.sh  config.custom  simple-kmod.ko
testing/scripts/: build_mainline_kernels.sh  gen_initramfs.sh  invoke_qemu.sh  run_single_test.sh
testing/test_bins/: common.h  create_rename_delete_file.c  create_rename_delete_file_container.c  do_nothing.c  fork_exec.c  fork_exit.c  poc_load_kernel_module.c  poc_memfd_create_exec.c  poc_ptrace.c  poc_shmget.c  setgid.c  setregid.c  setreuid.c  setuid.c  tcpv4_connect.c  tcpv6_connect.c  tty_write.c  udp_send.c
testing/test_bins/malware/: malware_elf_binary_arm64.h
testing/test_bins/simple-kmod/: .Module.symvers.cmd  .modules.order.cmd  .simple-kmod.ko.cmd  .simple-kmod.mod.cmd  .simple-kmod.mod.o.cmd  .simple-kmod.o.cmd  LICENSE  Makefile  README.md  modules.order  simple-kmod.c  simple-kmod.ko  simple-kmod.mod  simple-kmod.mod.c
testing/testrunner/: ctxread.go  ebpf_test.go  ebpfrunner.go  eventstrace.go  go.mod  go.sum  main.go  tests.go  utils.go
